syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;


service Greeter {
  rpc File (FileRequest) returns (FileReply) {}
  rpc Test (TestRequest) returns (TestResponse);
}

message FileRequest {
  bytes data = 1;
  string fileName = 2;
  int32 chunkIndex = 3;
}

message FileReply {
  bool success = 1;
  string message = 2;
}

message TestRequest {
	string name = 1;
}

message TestResponse {
	string message = 1;
}